# pykitty

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  testing_and_coverage_upload.yml
pykitty/: __init__.py  cli.py  client.py  kitty_parser.py
tests/: test_client.py  test_e2e.py  test_parser.py
