[tool.poetry]
name = "pykitty"
version = "0.3.0"
description = "The unofficial Kittysplit wrapper for Python."
authors = ["Lars Heinen"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
pykitty = "pykitty.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.31.0"
typer = {version = "0.11.0", extras = ["all"]}
beautifulsoup4 = "4.12.3"

[tool.poetry.group.dev.dependencies]
black = ">=23.1,<25.0"
isort = "^5.12.0"
coverage = "^7.2.5"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
